--- a/dialog/atprk_ancientguardian.config
+++ b/dialog/atprk_ancientguardian.config
@@ -76,7 +76,7 @@
       "default" : [
         "The enemy is still here.",
         "I will not fail you this time, master.",
-        "The inruders have returned."
+        "The intruders have returned."
       ]
     }
   },
