--- a/dialog/atprk_relicseekercrew.config
+++ b/dialog/atprk_relicseekercrew.config
@@ -53,7 +53,7 @@
             "It'd be thrilling t' find out what the Old Ones thought of the Ancients... If they knew 'bout them at all.",
             "Howdy, my name is <selfname>. Pleased to meet yet another curious spacefarer!",
             "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
-            "We Novakids don't have well-written history books, so it's our duty to finally record everything right.",
+            "Oh hey, an Avali!... Heck, sorry, I keep mixin' the two races' names up. Didn't mean t' offend, I swear!",
             "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
             "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
             "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
@@ -201,6 +201,126 @@
             "You know why I joined the Relic Seekers? There're so many gaps in our history that I doubt it's even real.",
             "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
           ],
+          "shoggoth" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
+            "Oh... What are you supposed t' be? I don't 'member seein' folks like you...",
+            "Howdy, my name is <selfname>. Pleased to meet yet another curious spacefarer!",
+            "Don't get me wrong but there's somethin' otherworldly 'bout your look. Have you come 'ere from beyond our reality?",
+            "I've met a Shoggoth like you once. They kept muttering somethin' about \"death state\". What's that supposed to mean?",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Learnin' about the races that came before us is excitin' and disturbin' at the same time. How many of 'em were out there?",
+            "Wait, is all of your body just goo? You better not splash it 'round!",
+            "I can't help feelin' as if there's a darker side to the Ancients. Can't really explain why.",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "'scuse me, are you a Shoggoth? Care t' answer some questions about your peers? I'll try not t' be irksome.",
+            "Why do many space anomalies turn out t' be mundane stations or asteroids? They give us nothin' new and waste our time.",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "You know why I joined the Relic Seekers? There're so many gaps in our history that I doubt it's even real.",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
+          ],
+          "avali" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Ain't that a real 'vali I see? Welcome aboard!",
+            "Howdy, feathered pal! It's always a pleasure t' meet an Avali! Especially not a xenophobic one!",
+            "Given how old 'n advanced your kind is, perhaps you could share some knowledge on the elder races with us... Please?",
+            "Gotta say, I've always been amazed by your peers and culture. Too bad those ADF guys are kinda... y'know.",
+            "Rumors say you Avali fellas came to our galaxy from elsewhere. Is it true, or did someone just make it up?",
+            "Oh hey, an Avikan!... Heck, sorry, I keep mixin' the two races' names up. Didn't mean t' offend, I swear!",
+            "We're well aware of the long history of your people. But can we somehow learn more about it? It could help our research quite a lot.",
+		"What do the Avali think about K'Rakoths? I mean, they were quite developed in their prime as well.",
+            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "We Novakids don't have well-written history books, so it's our duty to finally record everything right.",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such... No? Okay."
+          ],
+          "smolavali" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Huh? Who's there?... Oh, here you are. Didn't see you at first.",
+            "Howdy, feathered pal! It's always a pleasure t' meet an Avali! Especially not a xenophobic one!",
+            "Given how old 'n advanced your kind is, perhaps you could share some knowledge on the elder races with us... Please?",
+            "Gotta say, I've always been amazed by your peers and culture. Too bad those ADF guys are kinda... y'know.",
+            "Rumors say you Avali fellas came to our galaxy from elsewhere. Is it true, or did someone just make it up?",
+            "So you must be a member of that purist faction the other Avali keep bringin' up, amirite? Intriguin'.",
+            "We're well aware of the long history of your people. But can we somehow learn more about it? It could help our research quite a lot.",
+		"What do the Avali think about K'Rakoths? I mean, they were quite developed in their prime as well.",
+            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "We Novakids don't have well-written history books, so it's our duty to finally record everything right.",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such... No? Okay."
+          ],
+          "novali" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "You alright 'ere? You look outta shape for a Novakid. Is your brand damaged or somethin'?",
+            "Howdy, glowing pal! It's always a pleasure t' meet a Novali! Especially not a xenophobic one!",
+            "Given how old 'n advanced your kind is, perhaps you could share some knowledge on the elder races with us... Please?",
+            "Gotta say, I've always been amazed by your peers and culture. Too bad those ADF guys are kinda... y'know.",
+            "Color me surprised! Never thought a Novakid-Avali hybrid was possible! Not that I'm against it, don't get me wrong.",
+            "Uh... I ain't a biologist but it's kinda odd sein' a glowin' Avali, to be frank.",
+            "We're well aware of the long history of your people. But can we somehow learn more about it? It could help our research quite a lot.",
+		"What do the Avali think about K'Rakoths? I mean, they were quite developed in their prime as well.",
+            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "Life finds a way, eh? If you know what I mean.",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such... No? Okay."
+          ],
+          "saturn" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Your kind seems t' be very intelligent. Has any of your peers considered joinin' us, the Relic Seekers?",
+            "How're things goin' in Solalei City? I've heard it's home to many renowned Saturnian wizards 'n scholars.",
+            "Magic-shmagic. Sorry, fella, I ain't buyin' that. Sure, there're many freaky things goin' on but everything in our Universe must 'ave logical explaination.",
+            "Pleased to meet a Saturnian! I hope you'll find whatever knowledge you're looking for.",
+            "Well, if it isn't a Saturnian! Feel free t' stay aboard our space train! We've got a broad collection o' books here!",
+            "Are you from Solalei or Actias? Or maybe even from Rubicunda?",
+            "You're not one of those weirdos who keep buzzing for no reason, are you? It's mighty difficult to understand their speech!",
+            "I wonder where your people really come from. Most myths I've heard from other Saturnians don't help much.",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Learnin' about the races that came before us is excitin' and disturbin' at the same time. How many of 'em were out there?",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "Your people must've better memory than us Novakids. Why not join us? You can help us a lot on our journey.",
+            "You know why I joined the Relic Seekers? There're so many gaps in our history that I doubt it's even real.",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
+          ],
+          "saturn2" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Your kind seems t' be very intelligent. Has any of your peers considered joinin' us, the Relic Seekers?",
+            "Your people's ties to moons is something we've been fascinated by for a while. I wonder if they'll allow us to record some of their rituals.",
+            "Magic-shmagic. Sorry, fella, I ain't buyin' that. Sure, there're many freaky things goin' on but everything in our Universe must 'ave logical explaination.",
+            "Pleased to meet a Thaumoth! I hope you'll find whatever knowledge you're looking for.",
+            "Well, if it isn't a Thaumoth! Feel free t' stay aboard our space train! We've got a broad collection o' books here!",
+            "Are you from Actias or Solalei? Or maybe even from Rubicunda?",
+            "You're not one of those weirdos who keep buzzing for no reason, are you? It's mighty difficult to understand their speech!",
+            "I wonder where your people really come from. Most myths I've heard from other Thaumoths don't help much.",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Learnin' about the races that came before us is excitin' and disturbin' at the same time. How many of 'em were out there?",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "Your people must've better memory than us Novakids. Why not join us? You can help us a lot on our journey.",
+            "You know why I joined the Relic Seekers? There're so many gaps in our history that I doubt it's even real.",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
+          ],
           "default" : [
             "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
             "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
@@ -236,11 +356,11 @@
             "Some things are better off forgotten, yet these glowing guys over there keep diggin' them up.",
             "The Ancients, K'Rakoths, the Ruin... How do you even keep track on all those countless elder beings?",
             "I used to work for Dreadwing, and compared to these Novakids, he didn't pay me anything.",
-            "Deep in the oceans, there're lost cities built by the elder races. I wonder how many treasures you can loot there.",
-            "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons, anyway!",
+            "Deep in the oceans, there're lost cities built by an elder race. I wonder how many treasures you can loot there.",
+            "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons anyway!",
             "Name's <selfname>. A mercenary, a gun freak and just a good penguin.",
             "Space trains are sorta stupid. Our flying saucers are much better.",
-            "What's up with Midnight planets? They're so pitch dark you don't see a thing on them!",
+            "What's up with midnight planets? They're so pitch dark you don't see a thing on them!",
             "Me and the boys tried to raid the Ancient Vault once. Let's just say it didn't go well."
           ]
         }
