--- a/dialog/atprk_relicseekercrew.config
+++ b/dialog/atprk_relicseekercrew.config
@@ -224,7 +224,7 @@
           "avali" : [
             "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
             "Ain't that a real 'vali I see? Welcome aboard!",
-            "Howdy, feathered pal! It's always a pleasure t' meet an Avali! Especially not a xenophobic one!",
+            "Howdy, feathered pal! It's always a pleasure t' meet an Avali! Especially a non-xenophobic one!",
             "Given how old 'n advanced your kind is, perhaps you could share some knowledge on the elder races with us... Please?",
             "Gotta say, I've always been amazed by your peers and culture. Too bad those ADF guys are kinda... y'know.",
             "Rumors say you Avali fellas came to our galaxy from elsewhere. Is it true, or did someone just make it up?",
@@ -243,8 +243,8 @@
           ],
           "smolavali" : [
             "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
-            "Huh? Who's there?... Oh, here you are. Didn't see you at first.",
-            "Howdy, feathered pal! It's always a pleasure t' meet an Avali! Especially not a xenophobic one!",
+            "Huh? Who's there?... Oh, there you are. Didn't see you at first.",
+            "Howdy, feathered pal! It's always a pleasure t' meet an Avali! Especially a non-xenophobic one!",
             "Given how old 'n advanced your kind is, perhaps you could share some knowledge on the elder races with us... Please?",
             "Gotta say, I've always been amazed by your peers and culture. Too bad those ADF guys are kinda... y'know.",
             "Rumors say you Avali fellas came to our galaxy from elsewhere. Is it true, or did someone just make it up?",
@@ -264,7 +264,7 @@
           "novali" : [
             "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
             "You alright 'ere? You look outta shape for a Novakid. Is your brand damaged or somethin'?",
-            "Howdy, glowing pal! It's always a pleasure t' meet a Novali! Especially not a xenophobic one!",
+            "Howdy, glowing pal! It's always a pleasure t' meet a Novali! Especially a non-xenophobic one!",
             "Given how old 'n advanced your kind is, perhaps you could share some knowledge on the elder races with us... Please?",
             "Gotta say, I've always been amazed by your peers and culture. Too bad those ADF guys are kinda... y'know.",
             "Color me surprised! Never thought a Novakid-Avali hybrid was possible! Not that I'm against it, don't get me wrong.",
@@ -285,7 +285,7 @@
             "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
             "Your kind seems t' be very intelligent. Has any of your peers considered joinin' us, the Relic Seekers?",
             "How're things goin' in Solalei City? I've heard it's home to many renowned Saturnian wizards 'n scholars.",
-            "Magic-shmagic. Sorry, fella, I ain't buyin' that. Sure, there're many freaky things goin' on but everything in our Universe must 'ave logical explaination.",
+            "Magic-shmagic. Sorry, fella, I ain't buyin' that. Sure, there're many freaky things goin' on but everything in our Universe must 'ave a logical explaination.",
             "Pleased to meet a Saturnian! I hope you'll find whatever knowledge you're looking for.",
             "Well, if it isn't a Saturnian! Feel free t' stay aboard our space train! We've got a broad collection o' books here!",
             "Are you from Solalei or Actias? Or maybe even from Rubicunda?",
@@ -304,8 +304,8 @@
           "saturn2" : [
             "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
             "Your kind seems t' be very intelligent. Has any of your peers considered joinin' us, the Relic Seekers?",
-            "Your people's ties to moons is something we've been fascinated by for a while. I wonder if they'll allow us to record some of their rituals.",
-            "Magic-shmagic. Sorry, fella, I ain't buyin' that. Sure, there're many freaky things goin' on but everything in our Universe must 'ave logical explaination.",
+            "Your people's ties to moons is something we've been fascinated by for a while. I wonder if they'll allow us to record some of your rituals.",
+            "Magic-shmagic. Sorry, fella, I ain't buyin' that. Sure, there're many freaky things goin' on but everything in our Universe must 'ave a logical explaination.",
             "Pleased to meet a Thaumoth! I hope you'll find whatever knowledge you're looking for.",
             "Well, if it isn't a Thaumoth! Feel free t' stay aboard our space train! We've got a broad collection o' books here!",
             "Are you from Actias or Solalei? Or maybe even from Rubicunda?",
