--- a/dialog/atprk_relicseekercrew.config
+++ b/dialog/atprk_relicseekercrew.config
@@ -41,6 +41,26 @@
             "You know why I joined the Relic Seekers? There're so many gaps in our history that I doubt it's even real.",
             "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
           ],
+          "penguin" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
+            "Hey, are you slackin' off again? Get back t' work! We ain't payin' you for nothin'!... Oh wait, you're not one of ours, sorry.",
+            "Huh? Who's there?... Oh, there you are. Didn't see you at first.",
+            "Don't get any ideas, pal. If I spot somethin' missing, we're kicking you outta here.",
+            "How many penguins do you need to move a bookcase? No, it's not a setup joke, I'm serious.",
+            "It's pretty dangerous out there. Let's just hope we don't run into Dreadwing 'n his crooks.",
+            "Say, are you lil' birdies related to those on Earth? You look way too similar, and we've got no records that would explain your origins.",
+            "You penguins are surprisingly industrious as long as you're properly motivated. Many of you have helped us out on our journey.",
+            "Y'know, with all those artifacts lyin' around, we wouldn't mind a helpin' hand. Or should I say a helpin' flipper?",
+            "Howdy, my name is <selfname>. Pleased to meet yet another curious spacefarer!",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
+          ],
           "avikan" : [
             "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
             "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
@@ -321,6 +341,66 @@
             "You know why I joined the Relic Seekers? There're so many gaps in our history that I doubt it's even real.",
             "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
           ],
+          "FutaraDragon" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
+            "So it turns out intelligent dragons exist huh. Does it imply that massive dragon hoards are real as well?",
+            "Sweet Cultivator, what's this giant lizard doin' here?! Y'know how much flammable materials we have?",
+            "Never thought I'd meet a real FutaraDragon in the flesh! Anyways, what does \"Futara\" actually mean?",
+            "Magic-shmagic. Sorry, fella, I ain't buyin' that. Sure, there're many freaky things goin' on but everything in our Universe must 'ave a logical explaination.",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Learnin' about the races that came before us is excitin' and disturbin' at the same time. How many of 'em were out there?",
+            "Are you dragons related t' the Ancients by any chance? No one really knows what they looked like so maybe they weren't humanoid at all, just like you.",
+            "Ah!... Ahem. Pardon me, I'm not used to large reptiles walkin' around like this.",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "You're welcome here as long as you don't sneeze. We don't want you to accidentally set all of our records on fire.",
+            "Why do many space anomalies turn out t' be mundane stations or asteroids? They give us nothin' new and waste our time.",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "You know why I joined the Relic Seekers? There're so many gaps in our history that I doubt it's even real.",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
+          ],
+          "pengukin" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
+            "Hey, are you slackin' off again? Get back t' work! We ain't payin' you for nothin'!... Oh wait, you're not one of ours, sorry.",
+            "Whoah, you're one tall penguin, that's for sure!",
+            "Don't get any ideas, pal. If I spot somethin' missing, we're kicking you outta here.",
+            "So that's what you Pengukin folks look like! I expected you to be shorter, to be frank... The lack of records on your kind doesn't help much.",
+            "It's pretty dangerous out there. Let's just hope we don't run into Dreadwing 'n his crooks.",
+            "What a strange-lookin' Avian. You alright here? Feelin' well?",
+            "You Pengukins are surprisingly industrious as long as you're properly motivated. Some of you have helped us out on our journey.",
+            "Y'know, with all those artifacts lyin' around, we wouldn't mind a helpin' hand. Or should I say a helpin' flipper?",
+            "Howdy, my name is <selfname>. Pleased to meet yet another curious spacefarer!",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
+          ],
+          "robopenguin" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
+            "Hey, are you slackin' off again? Get back t' work! We ain't payin' you for nothin'!... Oh wait, you're not one of ours, sorry.",
+            "Whoah, you're one tall penguin, that's for sure!",
+            "Don't get any ideas, pal. If I spot somethin' missing, we're kicking you outta here.",
+            "Err... What are you, a penguin? A Glitch? Somethin' in between?... I've never seen anyone like you...",
+            "It's pretty dangerous out there. Let's just hope we don't run into Dreadwing 'n his crooks.",
+            "What a strange-lookin' Glitch. You alright here? Feelin' well?",
+            "How intriguing! We've got no records on Glitch-Penguin hybrids! Mind if I ask you some questions about your origins?",
+            "Y'know, with all those artifacts lyin' around, we wouldn't mind a helpin' hand. Or should I say a helpin' flipper?",
+            "Howdy, my name is <selfname>. Pleased to meet yet another curious spacefarer!",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
+          ],
           "default" : [
             "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
             "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
@@ -356,6 +436,66 @@
             "Some things are better off forgotten, yet these glowing guys over there keep diggin' them up.",
             "The Ancients, K'Rakoths, the Ruin... How do you even keep track on all those countless elder beings?",
             "I used to work for Dreadwing, and compared to these Novakids, he didn't pay me anything.",
+            "Deep in the oceans, there're lost cities built by an elder race. I wonder how many treasures you can loot there.",
+            "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons anyway!",
+            "Name's <selfname>. A mercenary, a gun freak and just a good penguin.",
+            "Space trains are sorta stupid. Our flying saucers are much better.",
+            "What's up with midnight planets? They're so pitch dark you don't see a thing on them!",
+            "Me and the boys tried to raid the Ancient Vault once. Let's just say it didn't go well."
+          ],
+          "penguin" : [
+            "Working for the Relic Seekers isn't easy. You always want to snatch somethin' valuable from them.",
+            "You know how much those junk collectors pay for treasures we find for them? You won't believe if I say!",
+            "Got anything valuable? Like, you know, precious rocks or ancient pottery? Those guys pay a lot for all that stuff.",
+            "Sorry, pal! Gotta sort all that ancient junk by place of origin, no time for small talk!",
+            "Ay, if you're here to loot our stuff, at least don't take everything at once, okay?",
+            "Hey bud, you wanna take somethin' cool from those hooded oddballs? Wait til my shift ends, then I may help ya out.",
+            "All these glowin' nerds talk about is some ancient races. Seems to be their favorite subject.",
+            "Go talk with the hooded pals, they may have a job for ya!",
+            "Another fellow penguin! Welcome aboard, buddy! Would you care for some fresh tuna?",
+            "Some things are better off forgotten, yet these glowing guys over there keep diggin' them up.",
+            "The Ancients, K'Rakoths, the Ruin... How do you even keep track on all those countless elder beings?",
+            "I used to work for Dreadwing, and compared to these Novakids, he didn't pay me anything.",
+            "Deep in the oceans, there're lost cities built by an elder race. I wonder how many treasures you can loot there.",
+            "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons anyway!",
+            "Name's <selfname>. A mercenary, a gun freak and just a good penguin.",
+            "Space trains are sorta stupid. Our flying saucers are much better.",
+            "What's up with midnight planets? They're so pitch dark you don't see a thing on them!",
+            "Me and the boys tried to raid the Ancient Vault once. Let's just say it didn't go well."
+          ],
+          "pengukin" : [
+            "Working for the Relic Seekers isn't easy. You always want to snatch somethin' valuable from them.",
+            "You know how much those junk collectors pay for treasures we find for them? You won't believe if I say!",
+            "Got anything valuable? Like, you know, precious rocks or ancient pottery? Those guys pay a lot for all that stuff.",
+            "Sorry, pal! Gotta sort all that ancient junk by place of origin, no time for small talk!",
+            "Ay, if you're here to loot our stuff, at least don't take everything at once, okay?",
+            "Don't you look down on me! I may be short but unlike you, I'm a true penguin! Besides, being tall is overrated!",
+            "All these glowin' nerds talk about is some ancient races. Seems to be their favorite subject.",
+            "Go talk with the hooded pals, they may have a job for ya!",
+            "Oh hey, a tall one! How's the view up there? Don't bump your head into the roof!",
+            "Some things are better off forgotten, yet these glowing guys over there keep diggin' them up.",
+            "The Ancients, K'Rakoths, the Ruin... How do you even keep track on all those countless elder beings?",
+            "Lemme guess, your mother's an Avian, eh?",
+            "Deep in the oceans, there're lost cities built by an elder race. I wonder how many treasures you can loot there.",
+            "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons anyway!",
+            "Name's <selfname>. A mercenary, a gun freak and just a good penguin.",
+            "Space trains are sorta stupid. Our flying saucers are much better.",
+            "What's up with midnight planets? They're so pitch dark you don't see a thing on them!",
+            "Me and the boys tried to raid the Ancient Vault once. Let's just say it didn't go well."
+          ],
+          "robopenguin" : [
+            "Working for the Relic Seekers isn't easy. You always want to snatch somethin' valuable from them.",
+            "You know how much those junk collectors pay for treasures we find for them? You won't believe if I say!",
+            "Got anything valuable? Like, you know, precious rocks or ancient pottery? Those guys pay a lot for all that stuff.",
+            "Sorry, pal! Gotta sort all that ancient junk by place of origin, no time for small talk!",
+            "Ay, if you're here to loot our stuff, at least don't take everything at once, okay?",
+            "Hmph, faker!",
+            "All these glowin' nerds talk about is some ancient races. Seems to be their favorite subject.",
+            "Go talk with the hooded pals, they may have a job for ya!",
+            "Oh man, what have they done to ya? Can we somehow let ya outta this ugly robot body?",
+            "Some things are better off forgotten, yet these glowing guys over there keep diggin' them up.",
+            "The Ancients, K'Rakoths, the Ruin... How do you even keep track on all those countless elder beings?",
+            "A RoboPenguin, you say? Nay, never heard of that.",
             "Deep in the oceans, there're lost cities built by an elder race. I wonder how many treasures you can loot there.",
             "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons anyway!",
             "Name's <selfname>. A mercenary, a gun freak and just a good penguin.",
